Command line render gives seg fault 11 on OS X #37301

Closed
opened 2013-11-04 00:50:50 +01:00 by Oskar Gargas · 13 comments

%%%I've gave category: Rendering as I'm not sure where this bug should go. Possibly into OS X specific if it doesn't appear on other platforms.

- Operating System, Graphics card ---

OS X 10.9; Intel HD5000

- Blender version with error, and version that worked ---

2.69 - with error; 2.68a - working

- Short description of error ---

Running Blender render using command line gives a crash (Segmentation fault: 11) when running 2.69. The same command works using 2.68a.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

While on Mac OS X:
$ cd dir_with_attached.blend
$ /Applications/Blender/blender.app/Contents/MacOS/blender -b "test.01.blend" -F PNG -x 1 -f 1
%%%

%%%I've gave category: Rendering as I'm not sure where this bug should go. Possibly into OS X specific if it doesn't appear on other platforms. - Operating System, Graphics card --- OS X 10.9; Intel HD5000 - Blender version with error, and version that worked --- 2.69 - with error; 2.68a - working - Short description of error --- Running Blender render using command line gives a crash (Segmentation fault: 11) when running 2.69. The same command works using 2.68a. - Steps for others to reproduce the error (preferably based on attached .blend file) --- While on Mac OS X: $ cd dir_with_attached.blend $ /Applications/Blender/blender.app/Contents/MacOS/blender -b "test.01.blend" -F PNG -x 1 -f 1 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%After more tests I'm pretty sure the problem is with Maya key scheme. When it's turn on and saved to user settings/startup file Blender will crash when starting render from command line.%%%

%%%After more tests I'm pretty sure the problem is with Maya key scheme. When it's turn on and saved to user settings/startup file Blender will crash when starting render from command line.%%%

%%%I'm able to reproduce it in Linux. Here's the contents of blender.crash.txt


Blender 2.69 (sub 1), Revision: 60966

backtrace

/usr/lib/blender/blender() [0xbfa72d]
/lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7fb531ba04a0]
/usr/lib/blender/blender(WM_keymap_list_find+0x12) [0xc08a12]
/usr/lib/blender/blender(WM_modalkeymap_add+0x6c) [0xc0934c]
/usr/lib/blender/blender(KeyMaps_new_call+0x21) [0x1802bb1]
/usr/lib/blender/blender(RNA_function_call+0x12) [0x1715372]
/usr/lib/blender/blender() [0xf7cd9e]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyObject_Call+0x7e) [0x7fb5387e207e]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x5858) [0x7fb538724a58]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCode+0x3b) [0x7fb53872799b]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x1fd98a) [0x7fb53888598a]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x6ef9) [0x7fb5387260f9]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x7796) [0x7fb538726996]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCode+0x3b) [0x7fb53872799b]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x1fd98a) [0x7fb53888598a]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x704c) [0x7fb53872624c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x971c9) [0x7fb53871f1c9]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyObject_Call+0x7e) [0x7fb5387e207e]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x421d) [0x7fb53872341d]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x7796) [0x7fb538726996]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x971c9) [0x7fb53871f1c9]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyObject_Call+0x7e) [0x7fb5387e207e]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x421d) [0x7fb53872341d]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x7796) [0x7fb538726996]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x970b6) [0x7fb53871f0b6]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyObject_Call+0x7e) [0x7fb5387e207e]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(_PyObject_CallMethodObjIdArgs+0xcd) [0x7fb538775a8d]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyImport_ImportModuleLevelObject+0x7f4) [0x7fb53875b904]
/usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyImport_ImportModuleLevel+0x4c) [0x7fb53875be2c]
/usr/lib/blender/blender() [0xf83532]
/usr/lib/blender/blender(BPy_init_modules+0x272) [0xf83802]
/usr/lib/blender/blender(BPY_python_start+0xf8) [0xf743d8]
/usr/lib/blender/blender(WM_init+0xe4) [0xc06f34]
/usr/lib/blender/blender(main+0xc27) [0xbc4947]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7fb531b8b76d]
/usr/lib/blender/blender() [0xbf9299]
%%%

%%%I'm able to reproduce it in Linux. Here's the contents of blender.crash.txt ------ # Blender 2.69 (sub 1), Revision: 60966 # backtrace /usr/lib/blender/blender() [0xbfa72d] /lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7fb531ba04a0] /usr/lib/blender/blender(WM_keymap_list_find+0x12) [0xc08a12] /usr/lib/blender/blender(WM_modalkeymap_add+0x6c) [0xc0934c] /usr/lib/blender/blender(KeyMaps_new_call+0x21) [0x1802bb1] /usr/lib/blender/blender(RNA_function_call+0x12) [0x1715372] /usr/lib/blender/blender() [0xf7cd9e] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyObject_Call+0x7e) [0x7fb5387e207e] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x5858) [0x7fb538724a58] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCode+0x3b) [0x7fb53872799b] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x1fd98a) [0x7fb53888598a] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x6ef9) [0x7fb5387260f9] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x7796) [0x7fb538726996] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCode+0x3b) [0x7fb53872799b] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x1fd98a) [0x7fb53888598a] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x704c) [0x7fb53872624c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x971c9) [0x7fb53871f1c9] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyObject_Call+0x7e) [0x7fb5387e207e] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x421d) [0x7fb53872341d] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x7796) [0x7fb538726996] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x971c9) [0x7fb53871f1c9] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyObject_Call+0x7e) [0x7fb5387e207e] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x421d) [0x7fb53872341d] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x767b) [0x7fb53872687b] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalFrameEx+0x7796) [0x7fb538726996] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyEval_EvalCodeEx+0x85c) [0x7fb53871ef6c] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(+0x970b6) [0x7fb53871f0b6] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyObject_Call+0x7e) [0x7fb5387e207e] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(_PyObject_CallMethodObjIdArgs+0xcd) [0x7fb538775a8d] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyImport_ImportModuleLevelObject+0x7f4) [0x7fb53875b904] /usr/lib/x86_64-linux-gnu/libpython3.3m.so.1.0(PyImport_ImportModuleLevel+0x4c) [0x7fb53875be2c] /usr/lib/blender/blender() [0xf83532] /usr/lib/blender/blender(BPy_init_modules+0x272) [0xf83802] /usr/lib/blender/blender(BPY_python_start+0xf8) [0xf743d8] /usr/lib/blender/blender(WM_init+0xe4) [0xc06f34] /usr/lib/blender/blender(main+0xc27) [0xbc4947] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7fb531b8b76d] /usr/lib/blender/blender() [0xbf9299] %%%

%%%Could not reproduce the crash here. Does it happen if you add --factory-startup before -b ?%%%

%%%Could not reproduce the crash here. Does it happen if you add --factory-startup before -b ?%%%
Author

%%%As I noted in a comment crash happens when Maya key scheme is selected and saved in preferences.
Crash does not happen after adding --factory-startup.%%%

%%%As I noted in a comment crash happens when Maya key scheme is selected and saved in preferences. Crash does not happen after adding --factory-startup.%%%
Member

%%%Cannot reproduce on OSX 10.9 with Blender 2.69.

/Applications/Blender/blender.app/Contents/MacOS/blender -b "test.01.blend" -F PNG -x 1 -f 1

just renders me the cube with transparent background, saves it as .png and exits without error.

Jens%%%

%%%Cannot reproduce on OSX 10.9 with Blender 2.69. /Applications/Blender/blender.app/Contents/MacOS/blender -b "test.01.blend" -F PNG -x 1 -f 1 just renders me the cube with transparent background, saves it as .png and exits without error. Jens%%%
Member

%%%For me 2.69 on OS X Mavericks does not segfault with or without "Maya key scheme is selected and saved in preferences"

same command as Jens same result.

%%%

%%%For me 2.69 on OS X Mavericks does not segfault with or without "Maya key scheme is selected and saved in preferences" same command as Jens same result. %%%

This issue was referenced by blender/blender-addons-contrib@106699ecd7

This issue was referenced by blender/blender-addons-contrib@106699ecd7c904dedd1a25606c072d5570faa629

This issue was referenced by 106699ecd7

This issue was referenced by 106699ecd7c904dedd1a25606c072d5570faa629

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 106699ecd7.

Closed by commit 106699ecd7.

The issue is now solved, thanks for the report!

The issue is now solved, thanks for the report!
Author

Great! Glad I could help and thanks for your development. :)

Great! Glad I could help and thanks for your development. :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37301
No description provided.