Fix T37301: Command line render gives seg fault 11 on OS X

Issue was caused by wm->defaultconf being NULL when in
background mode which made keymap modifications from a
script crash.

Reviewed by Brecht, thanks!